# registration-api

./: .dockerignore  .env  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  amvera.yml  deploy.sh  docker-compose.prod.yml  prompt.md  pyproject.toml  registration-api.service
app/: main.py
app/api/: router.py
app/api/v1/: registrations.py
app/core/: config.py  numeric_key.py
app/db/: session.py
app/models/: __init__.py  registration.py
app/schemas/: registration.py
migrations/: README  env.py
migrations/versions/: 20260310_vol_per_role_add_info.py  20260312_0001_create_site_registrations.py  20260312_0002_add_numeric_key_to_site_registrations.py  20260312_0003_add_education_to_site_registrations.py  20260313_0004_make_passport_nullable.py  20260318_0005_increase_name_region_education_to_300.py  20260323_0006_add_official_invitation_to_site_registrations.py
nginx/: registration-api.conf
scripts/: smoke_post_registration.sh
tests/: test_integration_postgres.py  test_smoke_api.py
