[tool.poetry]
name = "registration-api"
version = "0.1.0"
description = "Forum registration API"
authors = ["Artyom Zobkov"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
psycopg = { extras = ["binary"], version = "^3.2.10" }
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
slowapi = "^0.1.9"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
	"integration: marks tests that require a real PostgreSQL instance",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
